-
Bug
-
Resolution: Done
-
P2: Important
-
5.14
-
None
| For Gerrit Dashboard: QTBUG-79447 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 278716,3 | rhi: metal: Fix and clean up committing resource bindings | 5.14 | qt/qtbase | Status: MERGED | +2 | 0 |
| For Gerrit Dashboard: QTBUG-79447 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 278716,3 | rhi: metal: Fix and clean up committing resource bindings | 5.14 | qt/qtbase | Status: MERGED | +2 | 0 |